--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="sidebar">
     <h1>Cuerpo Técnico</h1>
     <div class="logo-title">
-      <img src="logo.png" alt="Club Logo" />
+      <img src="FE Grama.png" alt="Club Logo" />
       <span>Temporada 25-26</span>
     </div>
     <div id="menu"></div>
