--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h1>Cuerpo Técnico</h1>
     <div class="logo-title" onclick="toggleAllFolders()" style="cursor: pointer;">
   <img src="FE Grama.png" alt="Club Logo" />
-  <span>Temporada 25-26 ⬇️</span>
+  <span>Temporada 25-26</span>
 </div>
     <div id="menu"></div>
   </div>
