--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
   <div class="sidebar">
     <h1>Cuerpo Técnico</h1>
-    <div class="logo-title" onclick="toggleAllFolders()" style="cursor: pointer;">
+    <div class="logo-title" onclick="toggleTemporada()" style="cursor: pointer;">
   <img src="FE Grama.png" alt="Club Logo" />
   <span>Temporada 25-26</span>
 </div>
