--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       cursor: pointer;
       margin: 4px 0;
       color: #dcdde1;
+      font-size: 14px;
+      font-style: italic;
     }
     .main {
       flex-grow: 1;
@@ -49,9 +51,6 @@
       width: 100%;
       height: 90vh;
       border: none;
-    }
-    .download {
-      margin-top: 10px;
     }
     #loading {
       text-align: center;
@@ -134,12 +133,7 @@
     }
 
     const viewer = document.getElementById("viewer");
-    viewer.innerHTML = `
-      <iframe src="${url}"></iframe>
-      <div class='download'>
-        <a href="${url}" download>⬇️ Descargar archivo</a>
-      </div>
-    `;
+    viewer.innerHTML = `<iframe src="${url}"></iframe>`;
   }
 
   function toggleTemporada() {
