--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cuerpo Técnico - Temporada 25-26</title>
+  <title>Cuerpo Técnico - Temporada</title>
   <style>
     body {
       font-family: sans-serif;
@@ -11,29 +11,27 @@
       display: flex;
       flex-direction: row;
       height: 100vh;
+      overflow: hidden;
     }
     .sidebar {
-      width: 250px;
+      width: 100%;
+      max-width: 250px;
       background: #0a3d62;
       color: white;
       padding: 10px;
       overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
     .sidebar h1 {
       font-size: 20px;
       text-align: center;
-      margin: 10px 0 15px;
+      margin: 10px 0;
     }
-    .logo-title {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 15px;
-      justify-content: center;
-      cursor: pointer;
-    }
-    .logo-title img {
-      height: 30px;
+    select {
+      width: 100%;
+      padding: 8px;
+      font-size: 14px;
+      margin-bottom: 10px;
     }
     .file {
       cursor: pointer;
@@ -44,26 +42,23 @@
     }
     .main {
       flex-grow: 1;
-      padding: 10px;
+      padding: 0;
       overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
     iframe {
       width: 100%;
-      height: 90vh;
+      height: 100vh;
       border: none;
     }
     #loading {
       text-align: center;
       color: #ccc;
-      padding-top: 20px;
+      padding: 10px 0;
     }
     @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
       .sidebar {
-        width: 100%;
-        height: auto;
+        max-width: 100%;
       }
     }
   </style>
@@ -71,12 +66,14 @@
 <body>
   <div class="sidebar">
     <h1>Cuerpo Técnico</h1>
-    <div class="logo-title" onclick="toggleTemporada()">
-      <img src="FE Grama.png" alt="Club Logo" />
-      <span>Temporada 25-26</span>
-    </div>
+    <select id="temporadaSelect" onchange="cargarArchivos()">
+      <option value="" data-folder-id="">Selecciona temporada</option>
+      <option value="25-26" data-folder-id="1Xa6VBUGbcJ5cWX-AhqgAQ-kx3_evJK3O">Temporada 25-26</option>
+    </select>
+    <select id="fileSelect" onchange="mostrarArchivo(this.value)">
+      <option value="">Selecciona archivo</option>
+    </select>
     <div id="loading" style="display:none;">⏳ Cargando archivos...</div>
-    <div id="menu"></div>
   </div>
 
   <div class="main">
@@ -87,35 +84,38 @@
   const GAS_URL = "https://script.google.com/macros/s/AKfycbwCB32kIcYHuSjnmaqkM4TZW5paT0_RoEfwIPy8QrQ3YiQZ_ixP5UJfJWg6tnvc0eOa/exec";
 
   async function cargarArchivos() {
+    const temporadaSelect = document.getElementById("temporadaSelect");
+    const folderId = temporadaSelect.options[temporadaSelect.selectedIndex].dataset.folderId;
+    const fileSelect = document.getElementById("fileSelect");
     const loading = document.getElementById("loading");
-    const menu = document.getElementById("menu");
-    menu.innerHTML = "";
+    fileSelect.innerHTML = '<option value="">Selecciona archivo</option>';
+    if (!folderId) return;
     loading.style.display = "block";
 
     try {
-      const res = await fetch(GAS_URL);
+      const res = await fetch(`${GAS_URL}?folder=${encodeURIComponent(folderId)}`);
       const data = await res.json();
       loading.style.display = "none";
 
       if (data.length === 0) {
-        menu.innerHTML = "<p style='color: #ccc;'>Sin archivos disponibles</p>";
+        fileSelect.innerHTML = '<option value="">Sin archivos disponibles</option>';
         return;
       }
 
       data.forEach(file => {
-        const f = document.createElement("div");
-        f.className = "file";
-        f.textContent = file.name;
-        f.onclick = () => mostrarArchivo(file.url);
-        menu.appendChild(f);
+        const opt = document.createElement("option");
+        opt.value = file.url;
+        opt.textContent = file.name;
+        fileSelect.appendChild(opt);
       });
     } catch (err) {
       loading.style.display = "none";
-      menu.innerHTML = "<p style='color: red;'>Error al cargar archivos.</p>";
+      alert("Error al cargar archivos.");
     }
   }
 
   async function mostrarArchivo(url) {
+    if (!url) return;
     const stored = JSON.parse(sessionStorage.getItem("acceso_valido"));
     const now = Date.now();
     if (!stored || now - stored.time > 24 * 60 * 60 * 1000) {
@@ -131,20 +131,10 @@
       }
     }
 
+    document.getElementById("fileSelect").innerHTML = '<option value="">Selecciona archivo</option>';
+
     const viewer = document.getElementById("viewer");
     viewer.innerHTML = `<iframe src="${url}"></iframe>`;
-  }
-
-  function toggleTemporada() {
-    const menu = document.getElementById("menu");
-    const estado = menu.dataset.opened === "true";
-    if (estado) {
-      menu.innerHTML = "";
-      menu.dataset.opened = "false";
-    } else {
-      cargarArchivos();
-      menu.dataset.opened = "true";
-    }
   }
 </script>
 </body>
